--- a/Lesson2-HTML-CSS/homework/homework.html
+++ b/Lesson2-HTML-CSS/homework/homework.html
@@ -1,1 +1,29 @@
 <!-- In this file you will complete the homework found in the homework-readme.md file -->
+<html>
+    <head>
+        <title>Asha's html homework</title>
+
+    </head>
+    <body>
+        <div>
+            <h1>Asha</h1>
+            <h3>Lambda School</h3>
+            <h4>HTML/CSS homework</h4>
+        </div>
+        <div>
+            <span>Pizza is my favorite food.</span>
+            <span>I like cheesy pepperoni pizza.</span><span>I like to season my pizza with chilli flakes.</span>
+            <a href="http://pizzahut.com">restaurant</a>
+        </div>
+        <div>
+            <ul>
+                <li>cheese pizza </li> <img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Cheese.png"/>
+                <li>pepperoni pizza</li><img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Pepperoni.png"/>
+            </ul>
+        </div>
+
+    </body>
+</html>
+
+
+
