--- a/Lesson2-HTML-CSS/homework/homework.html
+++ b/Lesson2-HTML-CSS/homework/homework.html
@@ -2,23 +2,38 @@
 <html>
     <head>
         <title>Asha's html homework</title>
+        <link rel="stylesheet" href="C:\Users\rajjf\LambdaSchool\Precourse\Lesson2-HTML-CSS\homework\styles.css"/>
+      <!--  <style rel>
+            h1{color:pink;}
+            img{width:400px;}
+            #thirdDiv{height:600px;
+                      width:500px;
+                      background:green;
+                      padding:50px;
+                      border:solid blue;
+            }
+            #spanId{font-size:18px;
+                    margin:50px;
+
+            }
+        </style>-->
 
     </head>
     <body>
-        <div>
+        <div class="divClass">
             <h1>Asha</h1>
             <h3>Lambda School</h3>
             <h4>HTML/CSS homework</h4>
         </div>
-        <div>
-            <span>Pizza is my favorite food.</span>
-            <span>I like cheesy pepperoni pizza.</span><span>I like to season my pizza with chilli flakes.</span>
+        <div class="divClass">
+            <span id="spanId">Pizza is my favorite food.</span>
+            <span id="spanId">I like cheesy pepperoni pizza.</span><span id="spanId">I like to season my pizza with chilli flakes.</span>
             <a href="http://pizzahut.com">restaurant</a>
         </div>
-        <div>
+        <div id="thirdDiv">
             <ul>
-                <li>cheese pizza </li> <img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Cheese.png"/>
-                <li>pepperoni pizza</li><img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Pepperoni.png"/>
+                <li>cheese pizza<img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Cheese.png"/></li>
+                <li>pepperoni pizza<img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Pepperoni.png"/></li>
             </ul>
         </div>
 
