modified html with center tag

--- a/Lesson2-HTML-CSS/homework/homework.html
+++ b/Lesson2-HTML-CSS/homework/homework.html
@@ -20,7 +20,7 @@
 
     </head>
     <body>
-        <div class="divClass">
+       <center> <div class="divClass">
             <h1>Asha</h1>
             <h3>Lambda School</h3>
             <h4>HTML/CSS homework</h4>
@@ -36,6 +36,7 @@
                 <li>pepperoni pizza<img src="https://www.pizzahut.com/assets/w/tile/thor/pizza_Pepperoni.png"/></li>
             </ul>
         </div>
+        </center>
 
     </body>
 </html>
